Moved generic css classes to a new file; Reorganized classes for readability and modularity; Fixed launch config to run on Firefox.

--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -1,71 +1,46 @@
-@font-face {
-    font-family: 'Cascadia Code';
-    src: url(../fonts/CascadiaCode.ttf);
-}
+:root {
+    --color-base: rgb(244, 236, 230);
+    --color-shade: rgb(237, 217, 198);
+    --color-dark: rgb(226, 184, 160);
+    --color-accent: rgb(225, 144, 147);
+    --color-alt: rgb(136, 170, 200);
 
-@font-face {
-    font-family: 'Cascadia Code';
-    src: url(../fonts/CascadiaCodeItalic.ttf);
-    font-style: italic;
-}
-
-html,
-body {
-    margin: 0;
-    padding: 0;
-
-    white-space: 0;
-
-    background-color: rgb(244, 236, 230);
-}
-
-.main {
-    margin: 0;
-    padding: 0;
-
-    font-family: 'Cascadia Code', 'Ubuntu', 'Courier New', Courier, monospace;
+    --color-text: rgb(30, 31, 34);
+    --color-text-shade: rgb(97, 100, 110);
 }
 
 .menu {
     padding: 10;
 
-    display: flex;
-    flex-direction: row;
     justify-content: right;
+    column-gap: 15px;
 
-    column-gap: 10px;
-
-    background-color: rgb(218, 218, 218);
+    background-color: var(--color-alt);
 }
 
 .menu a {
     font-size: 1.2em;
-    font-weight: 100;
+    font-weight: 300;
 
     text-decoration: none;
 
-    color: rgb(26, 58, 146);
+    color: var(--color-text);
 }
 
 .menu a:hover {
-    text-shadow: -2px 2px orange
+    text-shadow: -2px 2px var(--color-alt);
+
+    transform: translateY(-1px);
 }
 
 .info {
-    padding: 5;
+    padding: 15px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    row-gap: 5px;
-
-    background-color: rgb(255, 255, 255);
+    align-items: center;
+    row-gap: 10px;
 }
 
 .avatar {
-    margin: auto;
-
     width: 150px;
     height: 150px;
 
@@ -79,31 +54,12 @@ body {
 }
 
 .info p {
-    margin: 0;
+    padding: 0 5px 2px 5px;
 
-    text-align: center;
-
-    background: rgb(189, 189, 189);
-}
-
-.fname {
-    font-size: 2em;
-    font-weight: 100;
-}
-
-.title {
-    font-size: 1.25em;
-}
-
-.timezone {
-    font-weight: 100;
+    box-shadow: 0px 5px 0px -4px var(--color-accent);
 }
 
 .socials {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
     column-gap: 5px;
 }
 
@@ -126,6 +82,12 @@ body {
     background-color: rgb(136, 170, 200);
     background-position: center;
     background-repeat: no-repeat;
+
+    box-shadow: -3px 2px 0px 0px var(--color-accent);
+}
+
+.socials a:hover {
+    transform: translateY(-2px);
 }
 
 .linkedin {
@@ -162,127 +124,31 @@ body {
 
 .main-container {
     margin: auto;
-    padding: 5;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    row-gap: 5px;
+    padding: 5px;
 
     width: 70%;
 
-    background: rgb(214, 214, 214);
+    row-gap: 10px;
+
+    border-radius: 5px;
 }
 
-.container-title {
-    margin: 0;
-    padding: 0;
+.description-logos {
+    height: auto;
 
-    font-size: 2em;
-
-    font-weight: 100;
+    row-gap: 25px;
 }
 
-.projects-container {
-    margin: 0;
-    padding: 0;
-
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-
-    background-color: rgb(248, 248, 248);
-}
-
-.project-info {
-    margin: 0;
-    padding: 5px;
-
-    flex-grow: 1;
-
-    background-color: rgb(199, 199, 199);
-}
-
-.project-title {
-    margin: 0;
-    padding: 0;
-
-    font-size: 1.3em;
-    font-weight: bold;
-
-    text-align: right;
-}
-
-.project-description {
-    margin: 0;
-    padding: 5px;
-
-    display: flex;
-    flex-direction: row;
-    column-gap: 0px;
-
-    background-color: rgb(182, 182, 182);
-}
-
-.description-icons {
-    margin: 0;
-    padding: 15px;
-
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    gap: 25px;
-
-    background-color: rgb(255, 255, 255);
-}
-
-.description-icons img {
+.description-logos img {
     max-width: 100px;
     max-height: 32px;
 }
 
-.description-text {
-    margin: 0;
-    padding: 5px;
-
-    flex: 4 1 auto;
+.skill-logos {
+    gap: 50px;
 }
 
-.skills-container{
-    margin: 0;
-    padding: 15px;
-
-    display: flex;
-    flex-flow: column;
-
-    row-gap: 30px;
-
-    background-color: white;
-
-}
-
-.logo-container {
-    margin: 0;
-    padding: 0;
-
-    display: flex;
-    flex-flow: row;
-    justify-content: space-evenly;
-
-    column-gap: 60px;
-
-    background-color: rgb(252, 252, 252);
-}
-
-.skills-container img {
-    min-width: 56px;
-    max-width: 110px;
-    height: 56px;
-
-    /* flex: 1 1 auto; */
-
-    /* background-color: rgb(216, 216, 216); */
+.skill-logos img {
+    max-width: 100px;
+    max-height: 50px;
 }
